--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=config-server
 server.port=8888
 
 # URI of GIT repo containing properties
-spring.cloud.config.server.git.uri=https://github.com/briansjavablog/micro-services-spring-cloud-config
+#spring.cloud.config.server.git.uri=https://github.com/briansjavablog/micro-services-spring-cloud-config
+spring.cloud.config.server.git.uri=https://github.com/shyamdeore8158/micro-services-spring-cloud-config-server
 # path to properties from root of repo 
 spring.cloud.config.server.git.searchPaths: configuration
 
