--- a/configuration/equipments-service.properties
+++ b/configuration/equipments-service.properties
@@ -1,3 +1,3 @@
 # equipment config
-equipment-service.minBalance=99
-equipment-service.maxBalance=200
+server.localurl = 172.0.0.1:8383/development
+server.uaturl = 172.0.0.2:8383/uat
