--- a/configuration/server-config/spring-config-server-local.properties
+++ b/configuration/server-config/spring-config-server-local.properties
@@ -1,1 +1,5 @@
-server.url = 172.0.0.1:8181/local
+server.url = jdbc:oracle:thin:@//192.168.101.200:1521/pdborcl.mdc.anblicks.com
+server.username=admin_poc1
+server.password=admin_poc1
+server.driver=oracle.jdbc.OracleDriver
+server.showSql=false;
