--- a/configuration/server-config/spring-config-server-production.properties
+++ b/configuration/server-config/spring-config-server-production.properties
@@ -1,1 +1,5 @@
-server.url = 172.0.0.1:8282/production
+server.url = jdbc:oracle:thin:@//192.168.101.249:1521/pdborcl.mdc.anblicks.com
+server.username=admin_poc2
+server.password=admin_poc2
+server.driver=oracle.jdbc.OracleDriver
+server.showSql=false;
