--- a/configuration/server-config/spring-config-server-development.properties
+++ b/configuration/server-config/spring-config-server-development.properties
@@ -1,1 +1,5 @@
-server.url = 172.0.0.1:8383/development
+server.url = jdbc:oracle:thin:@//192.168.101.248:1521/pdborcl.mdc.anblicks.com
+server.username=admin_poc
+server.password=admin_poc
+server.driver=oracle.jdbc.OracleDriver
+server.showSql=false;
