--- a/configuration/server-config/spring-config-server-production.properties
+++ b/configuration/server-config/spring-config-server-production.properties
@@ -1,5 +1,5 @@
-server.url = jdbc:oracle:thin:@//192.168.101.249:1521/pdborcl.mdc.anblicks.com
-server.username=admin_poc2
-server.password=admin_poc2
-server.driver=oracle.jdbc.OracleDriver
-server.showSql=false;
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/aboutcompany
+spring.datasource.username=root
+spring.datasource.password=12345
