--- a/configuration/server-config/spring-config-server-development.properties
+++ b/configuration/server-config/spring-config-server-development.properties
@@ -1,4 +1,4 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:mysql://localhost:3306/aboutcompany
 spring.datasource.username=root
 spring.datasource.password=12345
