--- a/configuration/server-config/spring-config-server-production.properties
+++ b/configuration/server-config/spring-config-server-production.properties
@@ -1,4 +1,4 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=coracle.jdbc.OracleDriver
 
 spring.datasource.url=jdbc:mysql://localhost:3306/aboutcompany
 spring.datasource.username=root
