--- a/configuration/server-config/spring-config-server-production.properties
+++ b/configuration/server-config/spring-config-server-production.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=coracle.jdbc.OracleDriver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/aboutcompany
+spring.datasource.url=jdbc:oracle:thin:@//192.168.101.248:1521/pdborcl.mdc.anblicks.com
 spring.datasource.username=root
 spring.datasource.password=12345
