change username and password

--- a/configuration/server-config/spring-config-server-production.properties
+++ b/configuration/server-config/spring-config-server-production.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=coracle.jdbc.OracleDriver
 
 spring.datasource.url=jdbc:oracle:thin:@//192.168.101.248:1521/pdborcl.mdc.anblicks.com
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.username=admin_poc
+spring.datasource.password=admin_poc1
