--- a/configuration/server-config/spring-config-server-development.properties
+++ b/configuration/server-config/spring-config-server-development.properties
@@ -2,3 +2,6 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@//192.168.101.248:1521/pdborcl.mdc.anblicks.com
 spring.datasource.username=admin_poc
 spring.datasource.password=admin_poc1
+spring.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+spring.liquibase.changeLog=classpath:db/equipment-master-change-log.yaml
+spring.default.rest.max.record.size= 3
