--- a/configuration/server-config/spring-config-server-local.properties
+++ b/configuration/server-config/spring-config-server-local.properties
@@ -4,4 +4,4 @@ spring.datasource.username=admin_poc
 spring.datasource.password=admin_poc1
 spring.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 spring.liquibase.changeLog=classpath:db/equipment-master-change-log.yaml
-spring.default.rest.max.record.size= 3
+default.rest.max.record.size= 3
