--- a/configuration/server-config/station-service-application.yml
+++ b/configuration/server-config/station-service-application.yml
@@ -13,7 +13,7 @@ spring:
     hibernate:
       dialect: "org.hibernate.dialect.Oracle10gDialect"
   liquibase:
-    changeLog: "classpath:db/equipment-master-change-log.yaml"
+    changeLog: "classpath:db/station-master-change-log.yml"
 default:
   rest:
     max:
