--- a/configuration/server-config/zuul-server-application.properties
+++ b/configuration/server-config/zuul-server-application.properties
@@ -18,6 +18,10 @@ zuul.routes.equipments-service.service-id=equipments-service
 zuul.routes.auth-service.path=/auth/**
 zuul.routes.auth-service.service-id=AUTH-SERVICE
 
+# Map path to station service
+zuul.routes.auth-service.path=/station/**
+zuul.routes.auth-service.service-id=station-service
+
 # By default, all requests to gallery service for example will start with: "/gallery/"
 # What will be sent to the gallery service is what comes after the path defined, 
 # So, if request is "/gallery/view/1", gallery service will get "/view/1".
