SUN-1485 - Add authentication in graphQL services - updated equipments to equipment

--- a/configuration/server-config/auth-service-application.yml
+++ b/configuration/server-config/auth-service-application.yml
@@ -13,3 +13,7 @@ spring:
     hibernate:
       dialect: "org.hibernate.dialect.Oracle10gDialect"
     #  enable_lazy_load_no_trans: true
+graphql:
+    schema :
+      location: "graphql/auth.graphqls"    
+    
