--- a/configuration/server-config/zuul-server-application.properties
+++ b/configuration/server-config/zuul-server-application.properties
@@ -11,28 +11,36 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 zuul.ignored-services=*
 
 # Map paths to services
-zuul.routes.equipments-service.path=/equipment/**
-zuul.routes.equipments-service.service-id=equipments-service
-
-# Map path to auth service
-zuul.routes.auth-service.path=/auth/**
-zuul.routes.auth-service.service-id=AUTH-SERVICE
+zuul.routes.equipment-service.path=/equipment/**
+zuul.routes.equipment-service.service-id=equipment-service
 
 # Map path to station service
-zuul.routes.auth-service.path=/station/**
-zuul.routes.auth-service.service-id=station-service
+zuul.routes.station-service.path=/station/**
+zuul.routes.station-service.service-id=station-service
+
+# Map path to station service
+zuul.routes.user-service.path=/user/**
+zuul.routes.user-service.service-id=user-service
+
 
 # By default, all requests to gallery service for example will start with: "/gallery/"
 # What will be sent to the gallery service is what comes after the path defined, 
 # So, if request is "/gallery/view/1", gallery service will get "/view/1".
 # In case of auth, we need to pass the "/auth/" in the path to auth service. So, set strip-prefix to false
+# Map path to auth service
+zuul.routes.auth-service.path=/authorization/**
+zuul.routes.auth-service.service-id=auth-service
 zuul.routes.auth-service.strip-prefix=false
-
 # Exclude authorization from sensitive headers
 zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie 
 
 ribbon.ReadTimeout=90000
 ribbon.SocketTimeout=90000
 
+
 spring-security-jwt.signing.key=@123abc$%#
 spring-security-jwt.jwtExpiration.time=86400
+
+eureka.client.fetchRegistry= true
+ribbon.eureka.enabled=true
+zuul.sensitiveHeaders= Cookie,Set-Cookie
