--- a/configuration/server-config/equipment-service-application.yml
+++ b/configuration/server-config/equipment-service-application.yml
@@ -13,7 +13,7 @@ spring:
     hibernate:
       dialect: "org.hibernate.dialect.Oracle10gDialect"
   liquibase:
-    changeLog: "classpath:db/station-master-change-log.yml"
+    changeLog: "classpath:db/equipment-master-change-log.yaml"
 default:
   rest:
     max:
@@ -21,6 +21,5 @@ default:
         size: 3
 graphql:
     schema :
-      location: "graphql/station.graphqls"                        
+      location: "graphql/equipment.graphqls"
     
-      
